# Line_Detector_RosCar_Pi_R2

./: .gitignore  CapyTown_Semana11_RC2_Alumnos (2).docx  package.xml  setup.cfg  setup.py  setup.py.bak_rc2_20240824_144546
.claude/: settings.json
capytown_esan/: calibrate_beff.py  error_odom.py  hsv_tuner.py  lane_controller.py  lane_detector.py  move_square.py  run_square_cli.py  teleop_key.py
config/: hsv_params.yaml  pid_params.yaml  wheel_params.yaml
launch/: bringup.launch.py  lane_following.launch.py
scripts/: lane_report.py  lane_visualization.py  plot_lane_error.py  plot_trajectory.py
