<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesvens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>capytown_esan</name>
  <version>1.0.0</version>
  <description>Paquete ROS2 del proyecto CapyTown - Robotica 2026-I ESAN</description>
  <maintainer email="grupo@esan.edu.pe">Grupo CapyTown</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
